--- a/SpeculPlus/SpeculPlus/SpeculPlus.csproj
+++ b/SpeculPlus/SpeculPlus/SpeculPlus.csproj
@@ -16,6 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Logic\Logic.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="ScanPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
