--- a/SpeculPlus/SpeculPlus.Android/SpeculPlus.Android.csproj
+++ b/SpeculPlus/SpeculPlus.Android/SpeculPlus.Android.csproj
@@ -95,13 +95,15 @@
     <Folder Include="Resources\drawable-xhdpi\" />
     <Folder Include="Resources\drawable-xxhdpi\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
-    <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SpeculPlus\SpeculPlus.csproj">
       <Project>{219B0F12-9260-48B0-A812-408C920DF61A}</Project>
       <Name>SpeculPlus</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\barcode.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
