--- a/SpeculPlus/SpeculPlus.Android/SpeculPlus.Android.csproj
+++ b/SpeculPlus/SpeculPlus.Android/SpeculPlus.Android.csproj
@@ -105,5 +105,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\barcode.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\DeleteButton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\EditButton.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
