Styles, MainPage, EditPage updated

--- a/SpeculPlus/SpeculPlus/SpeculPlus.csproj
+++ b/SpeculPlus/SpeculPlus/SpeculPlus.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microcharts" Version="0.7.1" />
     <PackageReference Include="Microcharts.Forms" Version="0.7.1" />
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991265" />
     <PackageReference Include="ZXing.Net.Mobile" Version="2.4.1" />
