Categories creation/deletion, Product Image taking

--- a/SpeculPlus/SpeculPlus/SpeculPlus.csproj
+++ b/SpeculPlus/SpeculPlus/SpeculPlus.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Microcharts" Version="0.7.1" />
     <PackageReference Include="Microcharts.Forms" Version="0.7.1" />
+    <PackageReference Include="Xam.Plugin.Media" Version="4.0.1.5" />
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991265" />
     <PackageReference Include="ZXing.Net.Mobile" Version="2.4.1" />
     <PackageReference Include="ZXing.Net.Mobile.Forms" Version="2.4.1" />
